# c-practice

./: .gitignore  CMakeLists.txt  Todo.cpp  Todo.hpp  app.cpp  todo.h  vcpkg.json
src/: CliApp.hpp
src/password-manager/: pmanager.cpp  pmanager.hpp
src/process-list/: ProcessList.cpp  ProcessList.hpp
src/todo/: Todo.cpp  Todo.hpp
